# cmake_template

./: CMakeLists.txt  README.md
cmake/: README.md  add_cxx17_executable_target.cmake  functions_examples.cmake
docs/: CMakeLists.txt
include/: cmake_template.hpp
include/headerOnlyLib/: CMakeLists.txt  headerOnlyLib.hpp
include/libA/: libA.hpp
src/: CMakeLists.txt  main.cpp
src/libA/: CMakeLists.txt  libA.cpp
test/: CMakeLists.txt
test/libA/: CMakeLists.txt  test_libA.cpp
